--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: widget_chain
 description: Get rid of the nested hell
 version: 0.1.0
-homepage: https://github.com/luckybilly
+homepage: https://github.com/luckybilly/widget_chain
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
